--- a/src/components/layouts/Main.module.css
+++ b/src/components/layouts/Main.module.css
@@ -1,8 +1,11 @@
 .mainWrapper {
+    display: flex;
+    flex-direction: column;
+
     flex-grow: 1;
 }
 
 .main {
-    height: auto;
+    flex-grow: 1;
 }
 
