--- a/src/components/chemicals/styles/ChemicalsScreen.module.css
+++ b/src/components/chemicals/styles/ChemicalsScreen.module.css
@@ -2,14 +2,18 @@
 @value white, xxxs-size from variables;
 
 .chemicals {
+    display: flex;
+    flex-direction: column;
     margin: xxxs-size;
     padding: xxxs-size;
 
     background: white;
     height: 100%;
+
+    border-radius: 5px;
 }
 
 .listWrapper {
     overflow-y: auto;
-    max-height: calc(100vh - 160px);
+    flex-grow: 1;
 }
