--- a/src/components/chemicals/styles/ChemicalsScreen.module.css
+++ b/src/components/chemicals/styles/ChemicalsScreen.module.css
@@ -12,6 +12,7 @@
     height: 100%;
 
     border-radius: 5px;
+    box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)
 }
 
 .listWrapper {
