--- a/src/components/reports/Charts/styles/Pie.module.css
+++ b/src/components/reports/Charts/styles/Pie.module.css
@@ -24,3 +24,7 @@
     font-size: font-size-xxsmall;
     color: black;
 }
+
+.tooltip {
+    box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)
+}
