--- a/src/components/reports/styles/Statistics.module.css
+++ b/src/components/reports/styles/Statistics.module.css
@@ -11,4 +11,5 @@
     height: 100%;
 
     border-radius: 5px;
+    box-shadow: 0 1.6px 3.6px 0 rgba(0, 0, 0, 0.132), 0 0.3px 0.9px 0 rgba(0, 0, 0, 0.108)
 }
