--- a/src/components/reports/Charts/styles/Pie.module.css
+++ b/src/components/reports/Charts/styles/Pie.module.css
@@ -4,7 +4,7 @@
 .pie {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     gap: 15px;
 }
